--- a/Interni/Verbali/VI_17-02-01.tex
+++ b/Interni/Verbali/VI_17-02-01.tex
@@ -19,8 +19,8 @@
 	\item[Orario] 09:30 - 13:30;
 	\item[Durata] 4 ore;
 	\item[Luogo incontro] abitazione di \LS;
-	\item[Oggetto] discussione dell'architettura di minima di \proj{};
-	\item[Segretario] \LS; 
+	\item[Oggetto] discussione dell'architettura di minima di \proj;
+	\item[Segretario] \LS;
 	\item[Partecipanti] \ALL.
 \end{description}
 
